--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,23 +86,26 @@ body::before {
 /* ===============================
    HERO IMAGE FULL WIDTH
 ================================ */
+
 .hero-image::before {
   content: "";
   position: absolute;
   inset: 0;
   background:
-      linear-gradient(
+    linear-gradient(
       90deg,
       #050505 0%,
-      rgba(0,0,0,0.45) 15%,
-      rgba(0,0,0,0.45) 85%,
+      rgba(0,0,0,0.7) 25%,
+      rgba(0,0,0,0.4) 50%,
+      rgba(0,0,0,0.7) 75%,
       #050505 100%
     ),
-    url("../images/virage.jpg") center / cover no-repeat;
-
-  opacity: 0.85;
+    url("assets/images/virage.jpg") center center / contain no-repeat;
+  background-color: #050505;
+  opacity: 1;
   z-index: 0;
 }
+
 
 /* ===============================
    TEXTE SUR IMAGE
