--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,12 +336,12 @@ footer {
 /* ===============================
    MAP
 ================================ */
-.location .map {
+.localisation .map {
   position: relative;
   margin-top: 30px;
 }
 
-.location iframe {
+.localisation iframe {
   width: 100%;
   height: 400px;
   border-radius: 24px;
