--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,6 +286,16 @@ footer {
   .contact-form button {
     width: 100%;
   }
+   
+  .localisation {
+  text-align: center;
+  }
+
+  .localisation .map {
+  max-width: 1100px;
+  height: 420px;
+  margin: 40px auto 0;
+  }
 }
 
 /* ===============================
@@ -299,10 +309,12 @@ footer {
 }
 
 .hero-content {
-  max-width: 1200px;
-  width: 100%;
+  max-width: 1100px;
   margin: 0 auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hero-logo {
